# CCTV

./: Cargo.toml  index.html  insomnia_api.json  new.xml  test.xml  xml.xml
src/: discovery.rs  main.rs
src/_onvif/: camera.rs  mod.rs
src/_onvif/services/: devicemgmt.rs
src/_onvif/soap/: envelope.rs
src/_onvif/soap/headers/: probe.rs
src/_rtsp/client/: mod.rs
src/onvif/: camera.rs  device.rs  discovery.rs  mod.rs  prelude.rs  profile.rs
src/onvif/services/: devicemgmt.rs  media.rs  mod.rs  prelude.rs  service.rs
src/onvif/services/devicemgmt/: mod.rs  prelude.rs
src/onvif/services/devicemgmt/methods/: get_capabilities.rs  mod.rs
src/onvif/services/media/: mod.rs  prelude.rs
src/onvif/services/media/methods/: get_profiles.rs  get_stream_url.rs  mod.rs
src/onvif/soap/: client.rs  event_writer.rs  mod.rs
src/onvif/soap/headers/: header.rs  header_builder.rs  mod.rs  probe.rs  username_token.rs
src/rtsp/: client.rs  mod.rs  stream.rs
src/rtsp/client/: mod.rs
src/rtsp/rtp/: error.rs  mod.rs  package.rs  packet.rs  payload_type.rs  sequence.rs
src/rtsp/rtp/jpeg_payload/: headers.rs  mod.rs  tables.rs
src/rtsp/rtp/packet/: packet.rs
src/rtsp/rtp/parser/: mod.rs
src/rtsp/rtp/parser/jpeg/: headers.rs  mod.rs
src/rtsp/rtp/sequence/: error.rs  sequence.rs
src/rtsp/rtp_old/: mod.rs
src/rtsp/rtp_old/packet/: mod.rs  payload_type.rs
src/rtsp/rtp_old/parser/: mod.rs
src/rtsp/rtp_old/parser/jpeg/: mod.rs
src/rtsp/rtp_old/sequence/: error.rs  sequence.rs
src/soap/: client.rs  envelope.rs  error.rs  event_builder.rs  method_builder.rs  mod.rs  prelude.rs  probe_builder.rs  soap_builder.rs  writer_owner.rs
src/soap/builders/: get_capabilities_builder.rs  method_builder.rs  mod.rs  probe_builder.rs  soap_builder.rs
src/soap/headers/: header_builder.rs  mod.rs  probe.rs  username_token.rs
src/web/: mod.rs  onvif.rs  response.rs
src/xml/: event_builder.rs  event_writer.rs  mod.rs
