[package]
name = "cctv_360_degrees"
version = "0.1.0"
authors = ["Maxim <maxim230898@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.2"
xml-rs = "0.8.1"
serde = "1.0.105"
serde_json = "1.0.50"
serde-xml-rs = "0.4.0"
url = "2.1.1"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7"
sha1 = "0.6.0"
chrono = "0.4.11"
reqwest = "0.10.4"
base64 = "0.12.0"
tungstenite = "0.10.1"
tokio = { version = "0.2.13", features = ["full"] }
async-trait = "0.1.27"
futures = "0.3.4"
actix = "0.9.0"
actix-rt = "1.0.0"