[package]
name = "cctv_360_degrees"
version = "0.1.0"
authors = ["Maxim <maxim230898@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.2"
xml-rs = "0.8.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
serde-xml-rs = "0.4.0"
url = "2.1.1"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7"
sha1 = "0.6.0"
chrono = "0.4.11"
reqwest = { version = "0.10.4", features = ["blocking"] }
base64 = "0.12.0"
tungstenite = "0.10.1"
tokio = { version = "0.2.16", features = ["full"] }
async-trait = "0.1.29"
futures = "0.3.4"
actix = "0.9.0"
actix-rt = "1.0.0"