[package]
name = "cctv_360_degrees"
version = "0.1.0"
authors = ["Maxim <maxim230898@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
image = "0.23.4"
xml-rs ="0.8.3"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
serde-xml-rs = "0.4.0"
url = "2.1.1"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7"
sha1 = "0.6.0"
chrono = "0.4.11"
reqwest = "0.10.6"
base64 = "0.12.1"
tungstenite = "0.10.1"